--- a/.cargo/config
+++ b/.cargo/config
@@ -1,3 +1,10 @@
+[build]
+rustflags = ["-Z", "mir-opt-level=3", "-Z", "unsound-mir-opts"]
+
+[unstable]
+build-std = ["std", "panic_abort"]
+build-std-features = ["panic_immediate_abort"]
+
 [target.x86_64-unknown-linux-musl]
 rustflags = ["-C", "target-feature=-crt-static"]
 
