--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "hpyer"
 repository = "https://github.com/Gelbpunkt/hpyer"
 
 [build-system]
-requires = ["maturin"]
+requires = ["maturin>=0.11,<0.12"]
 build-backend = "maturin"
 
 [tool.maturin]
-manylinux = "off"
-strip = "on"
+manylinux = "Linux"
+strip = true
