--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,13 +32,7 @@ classifier = [
 ]
 
 [dependencies]
-associative-cache = "1"
-bytecount = { version = "0.6", default_features = false, features = [
-    "generic-simd",
-    "runtime-dispatch-simd"
-] }
 http = "0.2"
-itoa = { version = "0.4", default_features = false }
 once_cell = "1.8"
 pyo3 = { git = "https://github.com/PyO3/pyo3", default-features = false, features = [
     "macros",
@@ -53,15 +47,10 @@ reqwest = { git = "https://github.com/seanmonstar/reqwest", default-features = f
     "brotli",
     "deflate"
 ] }
-serde = "1.0"
-serde_json = { path = "./json", default_features = false, features = ["std"] }
-smallvec = { version = "1.6", default_features = false, features = ["const_generics", "union", "specialization", "write"] }
 tokio = { version = "1.1", default-features = false, features = [
     "rt-multi-thread"
 ] }
-wyhash = "0.5"
-# And some SIMD patches
-encoding_rs = { version = "0.8", features = ["simd-accel"] }
+orjson = { git = "https://github.com/Gelbpunkt/orjson.git", default-features = false, features = ["unstable-simd"] }
 
 [patch.crates-io]
 hyper = { git = "https://github.com/hyperium/hyper" }
